@@ -22,3 +22,4 @@ Bug fixes
  * Now page chooser (in a rich text editor) opens up at the link's parent page, rather than at the page itself (Matt Westcott)
  * Reverted fix for explorer menu scrolling with page content, as it blocked access to menus that exceed screen height
  * Image listing in the image chooser no longer becomes unpaginated after an invalid upload form submission (Stephen Rice)
+ * Confirmation message on the ModelAdmin delete view no longer errors if the model's string representation depends on the primary key (Yannick Chabbert)
